[package]
name = "breathe_led"
version = "0.1.0"
edition = "2024"

[dependencies]
# 点亮led所需依赖
embassy-stm32 = { version = "0.2.0", features = [ "defmt", "stm32f103ze", "unstable-pac", "memory-x", "time-driver-any" ] }
embassy-executor = { version = "0.7.0", features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-time = { version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-sync = { version = "0.6.2", features = ["defmt"] }

# defmt所需依赖
defmt = "1.0.1"
defmt-rtt = "1.0.0"
cortex-m = {version = "0.7.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.5"
panic-probe = "1.0.0"

[profile.release]
debug = 2
